WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143575
[WK2] Regression(
r182194
): The NetworkProcess is calling the wrong memory pressure handler before suspending
https://bugs.webkit.org/show_bug.cgi?id=143575
Summary
[WK2] Regression(r182194): The NetworkProcess is calling the wrong memory pre...
Chris Dumez
Reported
2015-04-09 13:40:49 PDT
After
r182194
, the NetworkProcess is calling the memory pressure handler before getting suspended to free-up as much memory as possible at this point. However, we are calling the default memory pressure handling code instead of the custom handler registered by the NetworkProcess. Radar: <
rdar://problem/20484338
>
Attachments
Patch
(3.32 KB, patch)
2015-04-09 13:46 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-04-09 13:46:06 PDT
Created
attachment 250463
[details]
Patch
WebKit Commit Bot
Comment 2
2015-04-09 15:20:30 PDT
Comment on
attachment 250463
[details]
Patch Clearing flags on attachment: 250463 Committed
r182608
: <
http://trac.webkit.org/changeset/182608
>
WebKit Commit Bot
Comment 3
2015-04-09 15:20:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug