[WK2] Regression(r182194): The NetworkProcess is calling the wrong memory pressure handler before suspending https://bugs.webkit.org/show_bug.cgi?id=143575 <rdar://problem/20484338>

Reviewed by Andreas Kling.

After r182194, the NetworkProcess is calling the memory pressure
handler before getting suspended to free-up as much memory as possible
at this point.

However, we were calling the default memory pressure handling code
instead of the custom handler registered by the NetworkProcess. This
patch fixes the problem.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::lowMemoryHandler):
(WebKit::NetworkProcess::initializeNetworkProcess):
(WebKit::NetworkProcess::processWillSuspend):
* NetworkProcess/NetworkProcess.h:


Canonical link: https://commits.webkit.org/161606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182608 268f45cc-cd09-0410-ab3c-d52691b4dbfc